--- a/deploy-k8s.yml
+++ b/deploy-k8s.yml
@@ -1,12 +1,16 @@
 - name: Deploy ABC App on Kubernetes
   hosts: localhost
+  gather_facts: true
   tasks:
     - name: Apply Deployment manifest
       kubernetes.core.k8s:
         state: present
         src: "{{ playbook_dir }}/deployment.yml"
+        namespace: default  # Explicitly define namespace
 
     - name: Apply Service manifest
       kubernetes.core.k8s:
         state: present
         src: "{{ playbook_dir }}/service.yml"
+        namespace: default  # Explicitly define namespace
+
