--- a/deploy-k8s.yml
+++ b/deploy-k8s.yml
@@ -1,16 +1,17 @@
 - name: Deploy ABC App on Kubernetes
   hosts: localhost
-  gather_facts: true
   tasks:
     - name: Apply Deployment manifest
       kubernetes.core.k8s:
         state: present
         src: "{{ playbook_dir }}/deployment.yml"
-        namespace: default  # Explicitly define namespace
+        kubeconfig: /home/ubuntu/.kube/config
+        namespace: default
 
     - name: Apply Service manifest
       kubernetes.core.k8s:
         state: present
         src: "{{ playbook_dir }}/service.yml"
-        namespace: default  # Explicitly define namespace
+        kubeconfig: /home/ubuntu/.kube/config
+        namespace: default
 
